--- a/nablaweb/bedpres/templates/bedpres/bedpres_detail.html
+++ b/nablaweb/bedpres/templates/bedpres/bedpres_detail.html
@@ -9,15 +9,13 @@
 {% include "news/includes/text_content.html" with news=bedpres%}
 
 {# Vis påmeldte #}
-{% if user.is_authenticated %}
-    {% if bedpres.get_users_attending %}
-        <h3>Påmeldte</h3>
-    {% endif %}
+{% if user.is_authenticated and bedpres.users_attending > 0 %}
+    <h3>Påmeldte</h3>
     <div class="registrations">
-        {% for user in bedpres.get_users_attending %}
+        {% for user in bedpres.get_attendance_list %}
         <span class="label label-default" style="display: inline-block;">
             {% if user.get_full_name %}
-                 {{ user.get_full_name }}
+                {{ user.get_full_name }}
             {% else %}
                 {{ user.username }}
             {% endif %}
