--- a/nablaweb/podcast/templates/podcast/podcast_list.html
+++ b/nablaweb/podcast/templates/podcast/podcast_list.html
@@ -4,8 +4,8 @@
 
 {% block content %}
 <body>
-    <h2>Skråttcast - og det ble lyd</h2>
-    <p>Her kan det stå det <a href="/komite/redaksjonen">redaksjonen</a> måtte ønske.</p>
+    <h2>Skråttcast</h2>
+    <p>Den snakkesalige <a href="/komite/redaksjonen">redaksjon</a> presenterer Skråttcast.</p>
 {% if latest_podcast_list %}
     <ul style="padding-left:0; display:inline;">
         {% for podcast in latest_podcast_list %}
