--- a/nablaweb/news/templates/news/news_summary_include.html
+++ b/nablaweb/news/templates/news/news_summary_include.html
@@ -3,9 +3,10 @@
 {% load thumbnail %}
 
 
+{% with newsurl=news.get_absolute_url %}
 <div class="col-md-{% if narrow %}6{% else %}12{% endif %} news_item {{ news.content_type.model }}">
     {% if news.as_child_class.correct_picture %}
-        <a href="{{ news.get_absolute_url }}">
+        <a href="{{ newsurl }}">
         {% if narrow %}
             <img alt="" class="news-picture" src="{% thumbnail news.as_child_class.correct_picture 370x123 box=news.as_child_class.correct_cropping quality=95 %}">
         {% else %}
@@ -15,9 +16,10 @@
     {% endif %}
 
     {% if narrow %}<h3>{% else %}<h2>{% endif %}
-            <a href="{{ news.get_absolute_url }}">{{ news.headline }}</a>
+            <a href="{{ newsurl }}">{{ news.headline }}</a>
     {% if narrow %}</h3>{% else %}</h2>{% endif %}
     {{ news.lead_paragraph|markdown|wikilinks}}
 
-    <p><a class="btn btn-default btn-read-more" href="{{ news.get_absolute_url }}">Les mer &raquo;</a></p>
+    <p><a class="btn btn-default btn-read-more" href="{{ newsurl }}">Les mer &raquo;</a></p>
 </div>
+{% endwith %}
