Fikset DeprecationWarning av type firstof

--- a/nablaweb/templates/comments/list.html
+++ b/nablaweb/templates/comments/list.html
@@ -2,6 +2,7 @@
 {% load thumbnail %}
 {% load markdown_deux_tags %}
 {% load mediawiki_links %}
+{% load firstof from future %}
 
 {% for comment in comment_list %}
 
