--- a/nablaweb/news/templates/news/includes/text_content.html
+++ b/nablaweb/news/templates/news/includes/text_content.html
@@ -1,9 +1,10 @@
 {% load markdown_deux_tags %}
 {% load mediawiki_links %}
 {% load thumbnail %}
+{% load cropping %}
 
 {% if news.as_child_class.correct_picture %}
-    <img alt="header" class="news-picture" src="{% thumbnail news.as_child_class.correct_picture 770x250 box=news.as_child_class.correct_cropping quality=95 %}">
+<img alt="header" class="news-picture" src="{% thumbnail news.as_child_class.correct_picture 770x250 box=news.as_child_class.correct_cropping quality=95 %}">
 {% endif %}
 <h2>{{ news.headline }}</h2>
 <strong>{{ news.lead_paragraph|markdown|wikilinks}}</strong>
