--- a/nablaweb/events/templates/events/event_list.html
+++ b/nablaweb/events/templates/events/event_list.html
@@ -62,7 +62,7 @@
                     </td>
                 </tr>
             {% empty %}
-                <tr><td>Du er ikke meldt på noe</td></tr>
+                <tr><td>Du er ikke meldt på noe.</td></tr>
             {% endfor %}
             </table>
         </div>
@@ -74,7 +74,6 @@
             <h2>Venteliste</h2> 
             <p>Melder du deg på et fullbooket arrangement, blir du satt på venteliste.
             Blir det ledige plasser, går de til dem som har ventet lengst.</p>
-            <p>Husk at du kan få prikker for en plass du har fått via venteliste.
         </div>
 
     {% else %}
