--- a/nablaweb/news/templates/news/news_summary_include.html
+++ b/nablaweb/news/templates/news/news_summary_include.html
@@ -6,13 +6,23 @@
 {% with newsurl=news.get_absolute_url %}
 <div class="col-md-{% if narrow %}6{% else %}12{% endif %} news_item {{ news.content_type.model }}">
     {% if news.as_child_class.correct_picture %}
+    {% if news.as_child_class.correct_cropping %}
         <a href="{{ newsurl }}">
         {% if narrow %}
-            <img alt="" class="news-picture" src="{% thumbnail news.as_child_class.correct_picture 370x123 box=news.as_child_class.correct_cropping quality=95 %}">
+            <img alt="" class="news-picture" src="{% thumbnail news.as_child_class.correct_picture 370x123 box=news.as_child_class.correct_cropping upscale quality=95 detail %}">
         {% else %}
-            <img alt="" class="news-picture" src="{% thumbnail news.as_child_class.correct_picture 770x300 box=news.as_child_class.correct_cropping quality=95 %}">
+            <img alt="" class="news-picture" src="{% thumbnail news.as_child_class.correct_picture 770x300 box=news.as_child_class.correct_cropping upscale quality=95 detail %}">
         {% endif %}
         </a>
+    {% else %}
+        <a href="{{ newsurl }}">
+        {% if narrow %}
+            <img alt="" class="news-picture" src="{% thumbnail news.as_child_class.correct_picture 370x123 quality=95 upscale crop="smart" detail %}">
+        {% else %}
+            <img alt="" class="news-picture" src="{% thumbnail news.as_child_class.correct_picture 770x300 quality=95 upscale crop="smart" detail %}">
+        {% endif %}
+        </a>
+    {% endif %}
     {% endif %}
 
     {% if narrow %}<h3>{% else %}<h2>{% endif %}
