Fiks HTML i markdown, utenom kommentarfelt og profiler

--- a/nablaweb/accounts/templates/accounts/view_member_profile.html
+++ b/nablaweb/accounts/templates/accounts/view_member_profile.html
@@ -74,7 +74,7 @@
             <tr>
                 <td>Biografi</td>
                 <td>
-                    {{ member.about|striptags|markdown:"safe,urlize"|wikilinks }}
+                    {{ member.about|markdown|wikilinks }}
                 </td>
             </tr>
             {% endif %}
