--- a/nablaweb/news/templates/news/includes/text_content.html
+++ b/nablaweb/news/templates/news/includes/text_content.html
@@ -7,6 +7,6 @@
 <img alt="header" class="news-picture" src="{% thumbnail news.as_child_class.correct_picture 770x250 box=news.as_child_class.correct_cropping quality=95 %}">
 {% endif %}
 <h2>{{ news.headline }}</h2>
-<strong>{{ news.lead_paragraph|markdown|wikilinks}}</strong>
-{{ news.body|markdown|wikilinks}}
+<strong>{{ news.lead_paragraph|markdown:"unsafe"|wikilinks}}</strong>
+{{ news.body|markdown:"unsafe"|wikilinks}}
 <hr>
