--- a/nablaweb/news/templates/news/news_summary_include.html
+++ b/nablaweb/news/templates/news/news_summary_include.html
@@ -28,7 +28,7 @@
     {% if narrow %}<h3>{% else %}<h2>{% endif %}
             <a href="{{ newsurl }}">{{ news.headline }}</a>
     {% if narrow %}</h3>{% else %}</h2>{% endif %}
-    {{ news.lead_paragraph|markdown|wikilinks}}
+    {{ news.lead_paragraph|markdown:"unsafe"|wikilinks}}
 
     <p><a class="btn btn-default btn-read-more" href="{{ newsurl }}">Les mer &raquo;</a></p>
 </div>
