--- a/nablaweb/templates/flatpages/emptysidebar.html
+++ b/nablaweb/templates/flatpages/emptysidebar.html
@@ -9,5 +9,5 @@
 
 {% block content %}
     <h2>{{ flatpage.title }}</h2>
-    {{ flatpage.content|markdown|wikilinks}}
+    {{ flatpage.content|markdown:"unsafe"|wikilinks}}
 {% endblock %}
