Ryddet opp + pep8 fix i nablad-appen

--- a/nablaweb/nabladet/templates/nabladet/nablad_detail.html
+++ b/nablaweb/nabladet/templates/nabladet/nablad_detail.html
@@ -29,7 +29,7 @@
 
 <h3>Arkiv</h3>
 <table class="table table-striped">
-{% for n in nablad_list %}
+{% for n in nablad_archive %}
 <tr><td>
     {% if n == nablad %}
     {{ n.pub_date|date:"F Y" }}
