Endret litt i templates etter innholds-skriv.

--- a/nablaweb/templates/base.html
+++ b/nablaweb/templates/base.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8">
     <title>
-        Nabla: {% block title %}linjeforeningen for Fysikk og matematikk ved NTNU{% endblock title %}
+        Nabla - {% block title %}linjeforeningen for Fysikk og matematikk ved NTNU{% endblock title %}
     </title>
     <meta name="description" 
           content="Hjemmesiden til linjeforeningen Nabla, for studentene på 
@@ -69,7 +69,7 @@
     {# navigasjonslenker #}
     <ul class="nav navbar-nav">
         <li><a href="/">Hjem</a></li>
-        <li><a href="{% url "event_list" %}">Kalender</a></li>
+        <li><a href="{% url "event_list" %}">Arrangementer</a></li>
         <li><a href="{% url "jobs_list" %}">Karriere</a></li>
         <li><a href="http://wiki.nabla.no/">Wiki</a></li>
 
@@ -97,7 +97,7 @@
                 <span class="caret"></span>
             </a>
             <ul class="dropdown-menu" >
-                {% cache 3600 com_list_dropdown %}
+                {% cache 3600 "com_list_dropdown" %}
                 {# Liste over komiteer #}
                 {% for com in coms %}
                     <li><a href="{{ com.get_absolute_url }}">{{ com.com.name }}</a></li>
