Oppgraderte django til 1.7.1 og la til wikien på forsiden.

--- a/nablaweb/templates/wiki/base_site.html
+++ b/nablaweb/templates/wiki/base_site.html
@@ -35,7 +35,7 @@
             <span class="icon-bar"></span>
           </button>
           {% block wiki_header_branding %}
-          <a class="navbar-brand" href="{% url 'wiki:root' %}">NablaWiki</a>
+          <a class="navbar-brand" href="{% url 'wiki:root' %}">Internwiki</a>
           {% endblock %}
         </div>
         <div class="navbar-collapse collapse">
