--- a/nablaweb/templates/base.html
+++ b/nablaweb/templates/base.html
@@ -71,7 +71,16 @@
         <li><a href="/">Hjem</a></li>
         <li><a href="{% url "event_list" %}">Arrangementer</a></li>
         <li><a href="{% url "jobs_list" %}">Karriere</a></li>
-        <li><a href="http://wiki.nabla.no/">Wiki</a></li>
+        <li><a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            Wiki
+            <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu" >
+
+            <li><a href="{% url "wiki:root" %}">Internwiki</a></li>
+            <li><a href="http://wiki.nabla.no/">Fagwiki</a></li>
+        </ul>
+        </li>
 
         <li class="dropdown">
             <a href="#om" class="dropdown-toggle" data-toggle="dropdown">
