Endret til https-protokoll
jQuery og mathjax lastes nå inn over https.

--- a/nablaweb/templates/base.html
+++ b/nablaweb/templates/base.html
@@ -251,13 +251,13 @@
 {# HTML5 shim, for IE6-8 support for HTML elements #}
 {% addtoblock "js-head" %}
     <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 {% endaddtoblock %}
 
 {# Obligatory jQuery #}
 {% addtoblock "js-head" %}
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
 {% endaddtoblock %}
 
 {# Google Analytics #}
@@ -300,6 +300,6 @@
 
     <script type="text/javascript" 
     async
-    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
     </script>
 {% endaddtoblock %}
