La til et textarea med alle epostene på et arrangement.
Noen PEP8 endringer.

--- a/nablaweb/events/templates/events/event_administer.html
+++ b/nablaweb/events/templates/events/event_administer.html
@@ -12,6 +12,8 @@
     {% if event.has_queue %}
         Ventende: {{ event.users_waiting }}<br />
     {% endif %}
+    Epostliste:
+    <textarea>{% for email in event.users_attending_emails %}{{ email }}; {% endfor %}</textarea>
 </p>
 
 <form action="" method="post" class="form">{% csrf_token %}
