Kan nå vise bilder.

--- a/nablaweb/templates/base.html
+++ b/nablaweb/templates/base.html
@@ -99,6 +99,7 @@
 			    <li><a href="{% url "nablad_list" %}">Nabladet</a></li>
                 <li><a href="{% url "podcast_list" %}">Skråttcast</a></li>
                 <li><a href="{% url "meeting_record_list" %}">Styremøtereferater</a></li>
+                <li><a href="{% url "albums" %}">Bilder</a></li>
             </ul>
         </li>
         <li class="dropdown">
