--- a/nablaweb/podcast/templates/podcast/podcast_detail.html
+++ b/nablaweb/podcast/templates/podcast/podcast_detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load markdown_deux_tags %}
 {% block content %}
 
 <link type="text/css" href="{{ STATIC_URL }}podcast/skin/jpn.css" rel="stylesheet" />
@@ -28,44 +29,47 @@
 <div class="tittel">
 <ul>
   <h4>Skråttcast - {{ podcast.title }}</h4>
-    <p>{{ podcast.pub_date }}</p>
+    <p>{{ podcast.pub_date }}. Antall visninger: ca. {{ podcast.view_counter }}</p>
 </ul>
 </div>
 <ul>
     <div id="jquery_jplayer_1" class="jp-jplayer"></div>
     <div id="jp_container_1" class="jp-audio">
-      <div class="jp-type-single">  
-        </div>  
-    <div class="jp-gui jp-interface">  
-  
-        <ul class="jp-controls">  
-          <li><a href="javascript:;" class="jp-play" tabindex="1">&#61515;</a></li>  
-          <li><a href="javascript:;" class="jp-pause" tabindex="1">&#61516;</a></li>  
-          <li><a href="javascript:;" class="jp-mute" tabindex="1" title="mute">&#61480;</a></li>  
-          <li><a href="javascript:;" class="jp-unmute" tabindex="1" title="unmute">&#61478;</a></li>  
-        </ul>  
-  
-        <div class="jp-progress">  
-          <div class="jp-seek-bar">  
-            <div class="jp-play-bar"></div>  
-          </div>  
-        </div>  
-  
-        <div class="jp-time-holder">  
-          <div class="jp-current-time"></div>  
-        </div>  
-  
-        <div class="jp-volume-bar">  
-          <div class="jp-volume-bar-value"></div>  
-        </div>  
-  
-    <div class="jp-no-solution">  
-      <span>Update Required</span>  
-      To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.  
-    </div>  
-  </div>  
-</div> 
-<p>{{ podcast.description }}</p>
+      <div class="jp-type-single">
+        </div>
+    <div class="jp-gui jp-interface">
+
+        <ul class="jp-controls">
+          <li><a href="javascript:;" class="jp-play" tabindex="1">&#61515;</a></li>
+          <li><a href="javascript:;" class="jp-pause" tabindex="1">&#61516;</a></li>
+          <li><a href="javascript:;" class="jp-mute" tabindex="1" title="mute">&#61480;</a></li>
+          <li><a href="javascript:;" class="jp-unmute" tabindex="1" title="unmute">&#61478;</a></li>
+        </ul>
+
+        <div class="jp-progress">
+          <div class="jp-seek-bar">
+            <div class="jp-play-bar"></div>
+          </div>
+        </div>
+
+        <div class="jp-time-holder">
+          <div class="jp-current-time"></div>
+        </div>
+
+        <div class="jp-volume-bar">
+          <div class="jp-volume-bar-value"></div>
+        </div>
+
+    <div class="jp-no-solution">
+      <span>Update Required</span>
+      To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
+    </div>
+  </div>
+</div>
+<p>{{ podcast.description | markdown }}</p>
+<div><a class="btn btn-primary btn-large" href="{{ podcast.file.url }}">
+        Last ned
+</a></div>
 <div class="bunn"></div>
 <!--
 <audio controls>
